# Walrus

./: CMakeLists.txt  LICENSE  README.md
examples/: chi_squared.cpp  neural_network.cpp  noise_tests.cpp  tests.cpp
include/: ctxt.hpp  evaluator.hpp  parameterizer.hpp
src/: ctxt.cpp  evaluator.cpp  parameterizer.cpp
